# skirmish-py

./: README.md  pyproject.toml
prompts/: NEXT_ROUND.md  OBJECTIVE.md  prompts.ts
src/skirmish/: __init__.py
src/skirmish/strategies/: example_1.js  example_2.js
tests/: test_run_match.py  test_skirmish.py
