[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skirmish"
version = "0.0.1"
description = "LLM Skirmish, an adversarial in-context learning benchmark"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Kai McPheeters", email = "kai@mcpheeters.us" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://llmskirmish.com"
Repository = "https://github.com/llmskirmish/skirmish-py"

[tool.hatch.build.targets.wheel]
packages = ["src/skirmish"]

[tool.hatch.build.targets.wheel.force-include]
"src/skirmish/strategies" = "skirmish/strategies"

[tool.pytest.ini_options]
testpaths = ["tests"]